--- a/assets/style.css
+++ b/assets/style.css
@@ -1,15 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body {
-  font-family: Arial, sans-serif;
-  margin: 20px;
+  font-family: 'Poppins', sans-serif;
+  background-color: #131316;
+  color: #ffffff;
+  margin: 0;
+  padding: 0;
 }
 
-h1 {
-  text-align: center;
+section {
+  display: grid;
+  place-items: center;
+  align-content: center;
+  min-height: 100vh;
 }
 
-h2 {
-  margin-top: 30px;
+.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transition: all 2s;
 }
+
+.hidden-kiri{
+  transform: translateX(-100%);
+}
+
+/* @media(prefers-reduced-motion) {
+  .hidden {
+    transition: none;
+  }
+} */
+
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+}
+
+.nama{
+  transition-delay: calc(100ms * var(--order));
+}
+
 
 label {
   display: block;
@@ -18,7 +48,7 @@ label {
 
 input[type="text"],
 textarea {
-  width: 100%;
+  width: 30vw;
   padding: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
