--- a/src/css/input.css
+++ b/src/css/input.css
@@ -7,6 +7,12 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+section {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
 .belum-muncul {
   opacity: 0;
   filter: blur(5px);
@@ -33,12 +39,17 @@ body {
   transition-delay: calc(100ms * var(--order));
 }
 
+.blob-motion{
+  position: absolute;
+  transform: translate(-10%,-35%);
+}
+
 #pembuka{
-  background-color: black;
+  background-color: #001220;
 }
 
 #peta{
-  background-color: whitesmoke;
+ckground-color: #f9f9f9;
 }
 
 #peta img{
@@ -46,5 +57,6 @@ body {
 }
 
 #algoritma{
-  background-color: black;
+  background-color: #001220;
 }
+
