mengubah bagian algoritma supaya tempat input graf dan input algoritma hanya satu saja

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -598,6 +598,10 @@ video {
   justify-content: center;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -648,8 +652,16 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .text-2xl {
