--- a/src/css/input.css
+++ b/src/css/input.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 section {
@@ -19,7 +19,7 @@ section {
   transition: all 2s;
 }
 
-.hidden-kiri{
+.hidden-kiri {
   transform: translateX(-100%);
 }
 
@@ -35,36 +35,36 @@ section {
   transform: translateX(0);
 }
 
-.animasi-tulisan{
+.animasi-tulisan {
   transition-delay: calc(100ms * var(--order));
 }
 
-.blob-motion{
+.blob-motion {
   position: absolute;
-  transform: translate(-10%,-35%);
+  transform: translate(-10%, -35%);
 }
 
-#pembuka{
+#pembuka {
   background-color: #001220;
 }
 
-#peta{
+#peta {
   background-color: #f9f9f9;
 }
 
-#peta img{
+#peta img {
   width: 40rem;
 }
 
-#peta-graf{
+#peta-graf {
   background-color: #001220;
 }
 
-#peta-misi{
+#peta-misi {
   background-color: #f9f9f9;
 }
 
-#algoritma{
+#algoritma {
   background-color: #001220;
 }
 
