--- a/public/css/style.css
+++ b/public/css/style.css
@@ -700,11 +700,6 @@ video {
   line-height: 2.5rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -715,14 +710,6 @@ video {
 
 .font-semibold {
   font-weight: 600;
-}
-
-.font-medium {
-  font-weight: 500;
-}
-
-.font-thin {
-  font-weight: 100;
 }
 
 .text-black {
@@ -748,6 +735,10 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Poppins", sans-serif;
 }
@@ -761,18 +752,18 @@ section {
 .belum-muncul {
   opacity: 0;
   filter: blur(5px);
-  transition: all 2s;
+  transition: all 4s cubic-bezier(0.1, 0.82, 0.165, 1);
 }
 
 .hidden-kiri {
   transform: translateX(-100%);
 }
 
-/* @media(prefers-reduced-motion) {
+@media(prefers-reduced-motion) {
   .belum-muncul {
     transition: none;
   }
-} */
+}
 
 .sudah-muncul {
   opacity: 1;
@@ -813,14 +804,43 @@ section {
   background-color: #001220;
 }
 
+.to-top {
+  position: fixed;
+  bottom: 16px;
+  right:32px;
+  width:50px;
+  height:50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size:32px;
+  color:white;
+  text-decoration: none;
+  transition: all .4s;
+}
+
+.to-top.active {
+  bottom:32px;
+  pointer-events: auto;
+  opacity:1;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+  /* Ubah tinggi sesuai kebutuhan Anda */
+  background-color: #f2f2f2;
+  /* Ubah warna latar belakang sesuai kebutuhan Anda */
+  font-weight: bolder;
+  font-style: italic;
+}
+
 .hover\:bg-blue-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-red-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .focus\:border-blue-500:focus {
@@ -832,4 +852,3 @@ section {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
-
