--- a/src/css/input.css
+++ b/src/css/input.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Poppins", sans-serif;
 }
@@ -16,18 +19,18 @@ section {
 .belum-muncul {
   opacity: 0;
   filter: blur(5px);
-  transition: all 2s;
+  transition: all 4s cubic-bezier(0.1, 0.82, 0.165, 1);
 }
 
 .hidden-kiri {
   transform: translateX(-100%);
 }
 
-/* @media(prefers-reduced-motion) {
+@media(prefers-reduced-motion) {
   .belum-muncul {
     transition: none;
   }
-} */
+}
 
 .sudah-muncul {
   opacity: 1;
@@ -68,3 +71,34 @@ section {
   background-color: #001220;
 }
 
+.to-top {
+  position: fixed;
+  bottom: 16px;
+  right:32px;
+  width:50px;
+  height:50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size:32px;
+  color:white;
+  text-decoration: none;
+  transition: all .4s;
+}
+
+.to-top.active {
+  bottom:32px;
+  pointer-events: auto;
+  opacity:1;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px; /* Ubah tinggi sesuai kebutuhan Anda */
+  background-color: #f2f2f2; /* Ubah warna latar belakang sesuai kebutuhan Anda */
+  font-weight: bolder;
+  font-style: italic;
+}
